Project service_snippets {
  database_type: 'PostgreSQL'
  Note: '''
    # Snippetbox Database
  '''
}

Table users as U {
  name varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  is_email_verified bool [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created timestamptz [not null, default: 'now()']
}

Table verify_emails {
  id bigserial [pk]
  name varchar [ref: > U.name, not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used_sc bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null, default: `now() + interval '15 minutes'`]
}
 
Table account {
  id integer [pk, increment] 
  account_id varchar [not null, ref: > U.name]
  username varchar [not null]
  created timestamptz [not null, default: 'now()']
}

Table snippets {
  id integer  [pk, increment]
  user_id integer [ref: > account.id, not null] 
  title varchar
  content varchar [not null] 
  expires timestamptz [not null]
  created timestamptz [not null, default: 'now()']
}

Table session {
  id uuid [pk]
  "name" varchar [NOT NULL, ref: > U.name]
  "refresh_token" varchar [NOT NULL]
  "user_agent" varchar [NOT NULL]
  "client_ip" varchar [NOT NULL]
  "is_blocked" boolean [NOT NULL, default: false]
  "expires_at" timestamptz [NOT NULL]
  "created" timestamptz [NOT NULL, default: 'now()']
}